[metadata]
name = sqltest
version = 0.0.4
author = stayrascal
author_email = stayrascal@gmail.com
description = sqltest: easy testing ETL sqls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stayrascal/sqltest
project_urls =
    Bug Tracker = https://github.com/stayrascal/sqltest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_file = LICENSE
keywords = test, ETL, sql

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
exclude =
    tests
    tests.*