[metadata]
name = sqltest
version = 0.0.14
description = sqltest: easy testing ETL sqls
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stayrascal/sqltest
author = stayrascal
author_email = stayrascal@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = test, ETL, sql
project_urls =
    Bug Tracker = https://github.com/stayrascal/sqltest/issues
    Source Code = https://github.com/stayrascal/sqltest

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*
